--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = ["oranges <email@oranges.net.nz>"]
 python = "^3.8"
 PyMySQL = "^1.0.2"
 click = "^8.1.3"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+unidecode = "^1.3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
