--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
-[tool.poetry]
+[project]
 name = "makepoll"
 version = "0.1.0"
 description = ""
-authors = ["oranges <email@oranges.net.nz>"]
+authors = [{ name = "oranges", email = "email@oranges.net.nz" }]
+requires-python = "~=3.8"
+dependencies = [
+    "PyMySQL>=1.0.2,<2",
+    "click>=8.1.3,<9",
+    "requests>=2.32.3,<3",
+    "beautifulsoup4>=4.12.3,<5",
+    "unidecode>=1.3.8,<2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-PyMySQL = "^1.0.2"
-click = "^8.1.3"
-requests = "^2.32.3"
-beautifulsoup4 = "^4.12.3"
-unidecode = "^1.3.8"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
+[dependency-groups]
+dev = ["pytest~=5.2"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
